[package]
name = "request"
version = "0.1.0"
authors = ["AntSe <antse@mbp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

structopt = "0.3.20"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'